# SparksOfLabor

./: .gitignore  Cargo.toml  README.md  SolDefinitions.txt  rustfmt.toml
address_server/: Cargo.toml
address_server/src/: lib.rs
client/: Cargo.toml
client/src/: main.rs  vector_alias.rs
client/src/voxel_engine/: chunk.rs
connection_server/: Cargo.toml
doc/: SolDefinitions.toml  SolMilestones.drawio  SolModuleScheme.drawio  SolNetworkScheme.drawio
entity_lib/: Cargo.toml
entity_messages/: Cargo.toml
entity_server/: Cargo.toml
game_engine/: Cargo.toml
load_balancer/: Cargo.toml
log_server/: Cargo.toml
log_server/src/: lib.rs  logger.rs  logger_mt.rs  main.rs
login_messages/: Cargo.toml
login_messages/src/: lib.rs
login_server/: Cargo.toml
network_lib/: Cargo.toml
network_lib/src/: constants.rs  lib.rs  network.rs
player/: Cargo.toml
player/res/cube/: untitled.ply
player/src/: entities.rs  game_event.rs  game_loop.rs  item_stack.rs  main.rs  minecraft_connection.rs  player_events.rs  player_handler.rs  player_loop.rs  player_state.rs  rendering.rs
player/src/entities/: entity.rs  entity_manager.rs
player/src/game_logic/: items.rs
player/src/minecraft_connection/: client_connection.rs  login.rs  minecraft_socket.rs  network.rs  player_character.rs  player_connect_handler.rs
player/src/minecraft_connection/raw/: status_response.json
player/src/rendering/: camera.rs  chunk_graphics.rs  entity_shader.rs  mesh.rs  render.rs
player/src/rendering/shaders/entity/: fragment.glsl  vertex.glsl
player/src/voxels/: world.rs
player_data_messages/: Cargo.toml
player_data_server/: Cargo.toml
player_position_server/: Cargo.toml
protocol/: Cargo.toml
protocol/src/: lib.rs
src/: main.rs  vector_alias.rs
src/rendering/: render.rs  window.rs
src/voxel_engine/: chunk.rs
voxel_engine/: Cargo.toml
voxel_engine/src/: block_types.rs  chunk.rs  lib.rs  vector_alias.rs  voxel_index_error.rs
voxel_lib/: Cargo.toml
voxel_lib/src/: advanced_voxel.rs  asset.rs  block.rs  block_types.rs  chunk.rs  chunk16.rs  chunk64.rs  chunk_2.rs  chunk_column.rs  chunk_convert.rs  chunk_tests.rs  lib.rs  palette.rs  palette_tests.rs  vector_alias.rs  voxel.rs  voxel_errors.rs  voxel_index_error.rs  voxel_properties.rs  world.rs
voxel_lib/src/advanced_voxel/: chest.rs
world_messages/: Cargo.toml
world_messages/src/: lib.rs
world_server/: Cargo.toml
world_server/src/: main.rs  network.rs  world.rs
