[package]
name = "sol_entity_server"
version = "0.0.1"
edition = "2021"

[dependencies]
sol_entity_lib = { path = "../entity_lib", version = "*" }
sol_entity_messages = { path = "../entity_messages", version = "*" }

nalgebra = { version = "0.31.4", features = ["serde-serialize"] }
serde = { version = "^1.0", features = ["derive"] }
zmq = "0.10.0"
