[package]
name = "sol_load_balancer"
version = "0.0.1"
edition = "2021"

[dependencies]
sol_world_messages = { path = "../world_messages", version = "*" }
sol_entity_messages = { path = "../entity_messages", version = "*" }
sol_login_messages = { path = "../login_messages", version = "*" }
sol_address_server = { path = "../address_server", version = "*" }

serde = { version = "^1.0", features = ["derive"] }
typetag = "0.2"