[package]
name = "sol_login_messages"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zmq = "0.10.0"
serde = { version = "^1.0", features = ["derive"] }
simple-error = "0.2.3"
typetag = "0.2"
bincode = "1.3.3"