[package]
name = "sol_player_data_server"
version = "0.0.1"
edition = "2021"

[dependencies]
sol_login_server = { path = "../login_server", version = "*" }
sol_address_server = { path = "../address_server", version = "*" }
sol_player_data_messages = { path = "../player_data_messages", version = "*" }

serde = { version = "^1.0", features = ["derive"] }
typetag = "0.2"