[package]
name = "sol_voxel_lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra = { version = "0.31.4", features = ["serde-serialize"] }
serde = { version = "^1.0", features = ["derive"] }
num-traits = "*"
num-derive = "*"
simple-error = "0.2.3"
typetag = "0.2"
minecraft-protocol = "*"