[package]
name = "sol_world_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sol_voxel_lib = { path = "../voxel_lib", version = "*" }
sol_address_server = { path = "../address_server", version = "*" }
sol_log_server = { path = "../log_server", version = "*" }
sol_world_messages = { path = "../world_messages", version = "*" }
sol_network_lib = { path = "../network_lib", version = "*" }

nalgebra = { version = "0.31.4", features = ["serde-serialize"] }
serde = { version = "^1.0", features = ["derive"] }
zmq = "0.10.0"
simple-error = "0.2.3"
minecraft-protocol = "*"
